[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitsune"
version = "1.3.0"
description = "Kitsune Userbot — fast, stable, modern Telegram userbot"
readme = "README.md"
license = { text = "AGPLv3" }
requires-python = ">=3.13"
authors = [
    { name = "Yushi", contact = "@Mikasu32" }
]
keywords = ["telegram", "userbot", "kitsune"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "heroku-tl-new>=2.0.0",
    # NOTE: pyrogram и TgCrypto-pyrofork удалены — в коде не использовались.
    # Остаётся hydrogram (для медиа) + tgcrypto (для ускорения hydrogram).
    "tgcrypto>=1.2.5",
    "aiohttp>=3.9.3",
    "aiohttp-jinja2>=1.6",
    "Jinja2>=3.1.4",
    "aiogram>=3.7.0",
    "httpx[asyncio]>=0.27.0",
    "GitPython>=3.1.43",
    "meval>=2.5",
    "grapheme>=0.6.0",
    "emoji>=2.12.1",
    "werkzeug>=3.0.3",
    "psutil>=5.9.8",
    "rsa>=4.9",
    "ruamel.yaml>=0.18.6",
    "pydantic>=2.7.0",
    "toml>=0.10.2",
    "aiofiles>=23.2.1",
    "colorama>=0.4.6",
    "PySocks>=1.7.1",
    "python-socks[asyncio]>=2.4.4",
]

[project.optional-dependencies]
redis = ["redis>=5.0.4"]
dev = ["mypy>=1.10.0", "black>=24.4.2", "ruff>=0.4.4"]

[project.scripts]
kitsune = "kitsune.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kitsune*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
