[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kitsune"
version = "1.2.4"
description = "Kitsune Userbot — fast, stable, modern Telegram userbot"
readme = "README.md"
license = { text = "AGPLv3" }
requires-python = ">=3.10"
authors = [
    { name = "Yushi", contact = "@Mikasu32" }
]
keywords = ["telegram", "userbot", "kitsune"]

dependencies = [
    "heroku-tl-new>=2.0.0",
    "TgCrypto-pyrofork",
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "aiohttp>=3.9.3",
    "aiohttp-jinja2>=1.6",
    "Jinja2>=3.1.4",
    "aiogram>=3.7.0",
    "httpx[asyncio]>=0.27.0",
    "GitPython>=3.1.43",
    "meval>=2.5",
    "grapheme>=0.6.0",
    "emoji>=2.12.1",
    "werkzeug>=3.0.3",
    "psutil>=5.9.8",
    "rsa>=4.9",
    "ruamel.yaml>=0.18.6",
    "pydantic>=2.7.0",
    "toml>=0.10.2",
    "aiofiles>=23.2.1",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
redis = ["redis>=5.0.4"]
dev = ["mypy>=1.10.0", "black>=24.4.2", "ruff>=0.4.4"]

[project.scripts]
kitsune = "kitsune.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kitsune*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
